@@ -1,58 +1,0 @@
-/* XPM */
-static char * menu_ftp_connect_xpm[] = {
-"16 16 39 1",
-" 	c None",
-".	c #000000",
-"+	c #989389",
-"@	c #807D74",
-"#	c #C6C2BA",
-"$	c #34332D",
-"%	c #B7B3AA",
-"&	c #C4C2BD",
-"*	c #EAE8E3",
-"=	c #E2E1DD",
-"-	c #F0EFEC",
-";	c #AAA7A0",
-">	c #F0EEEB",
-",	c #F2F0ED",
-"'	c #EBEAE6",
-")	c #8A857B",
-"!	c #ECEBE8",
-"~	c #EEECEA",
-"{	c #78756B",
-"]	c #BEBBB5",
-"^	c #B3B1AA",
-"/	c #7D786E",
-"(	c #E1DFDB",
-"_	c #D1D0CC",
-":	c #010101",
-"<	c #8C8981",
-"[	c #A6A29B",
-"}	c #726D63",
-"|	c #CECAC3",
-"1	c #A7A49E",
-"2	c #0F0F0D",
-"3	c #3C3933",
-"4	c #8B877E",
-"5	c #706C62",
-"6	c #B1ADA4",
-"7	c #6C685E",
-"8	c #97938A",
-"9	c #646056",
-"0	c #8B877D",
-"                ",
-"                ",
-"           .. ..",
-"         ..+@.#@",
-"        $%&*@.*@",
-"       .=-;*@.>@",
-".......@=-;*@.>@",
-"********,')!@.~@",
-"@@@@@@{{]^/({._@",
-"......:{<[}|{.1@",
-"       2<[}|{.1@",
-"       234567.8@",
-"         22+9.0@",
-"           22 2.",
-"                ",
-"                "};
