@@ -1,48 +1,0 @@
-/* XPM */
-static char * menu_ftp_disconnect_xpm[] = {
-"16 16 29 1",
-" 	c None",
-".	c #000000",
-"+	c #989389",
-"@	c #807D74",
-"#	c #C6C2BA",
-"$	c #C4C2BD",
-"%	c #EAE8E3",
-"&	c #AAA7A0",
-"*	c #C5D2C8",
-"=	c #E9EEEA",
-"-	c #F0EEEB",
-";	c #8A857B",
-">	c #ECEBE8",
-",	c #EEECEA",
-"'	c #7D786E",
-")	c #E1DFDB",
-"!	c #78756B",
-"~	c #D1D0CC",
-"{	c #726D63",
-"]	c #CECAC3",
-"^	c #A7A49E",
-"/	c #F0F3F1",
-"(	c #706C62",
-"_	c #B1ADA4",
-":	c #6C685E",
-"<	c #97938A",
-"[	c #0F0F0D",
-"}	c #646056",
-"|	c #8B877D",
-"                ",
-"                ",
-" ..           ..",
-".+@.         .#@",
-"$%@....      .%@",
-"&%@.**=.     .-@",
-"&%@....      .-@",
-";>@.         .,@",
-"')!.         .~@",
-"{]!....      .^@",
-"{]!.**/.     .^@",
-"(_:....      .<@",
-"[+}.         .|@",
-" [[           [.",
-"                ",
-"                "};
