@@ -42,7 +42,7 @@ typedef enum {
     PIXMAP_MKDIR,
     PIXMAP_LOCK,
     PIXMAP_HOME,
-        PIXMAP_DESKTOP,
+    PIXMAP_DESKTOP,
     PIXMAP_SMB_NETWORK,
     PIXMAP_SMB_COMPUTER,
     PIXMAP_BOOKMARK,
@@ -53,11 +53,9 @@ typedef enum {
     PIXMAP_ROOT_DIR,
     PIXMAP_FTP_CONNECT,
     PIXMAP_FTP_DISCONNECT,
-    PIXMAP_MENU_FTP_CONNECT,
-    PIXMAP_MENU_FTP_DISCONNECT,
     PIXMAP_SWITCH_V,
     PIXMAP_SWITCH_H,
-    
+
     PIXMAP_INTERNAL_VIEWER,
 
     NUM_PIXMAPS
